--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-☐ permissions system
+✔ permissions system @started(19-10-20 20:03) @done(19-10-25 14:27) @lasted(4d18h24m20s)
 ☐ more detailed docs
 ☐ custom arg types for cmds
 ☐ tests with jest
