single arg mode (v0.0.4)

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 ✔ permissions system @started(19-10-20 20:03) @done(19-10-25 14:27) @lasted(4d18h24m20s)
-☐ more detailed docs
 ✔ custom arg types for cmds @started(19-10-29 13:34) @done(19-10-29 14:42) @lasted(1h8m30s)
-☐ tests with jest
+- more detailed docs
+- tests with jest
+- move argument type check to module from commandParser
