--- a/TODO
+++ b/TODO
@@ -1,5 +1,35 @@
-✔ permissions system @started(19-10-20 20:03) @done(19-10-25 14:27) @lasted(4d18h24m20s)
-✔ custom arg types for cmds @started(19-10-29 13:34) @done(19-10-29 14:42) @lasted(1h8m30s)
-- more detailed docs
-- tests with jest
-- move argument type check to module from commandParser
+Use https://marketplace.visualstudio.com/items?itemName=fabiospampinato.vscode-todo-plus to view this correctly.
+
+done:
+    ✔ permissions system @started(19-10-20 20:03) @done(19-10-25 14:27) @lasted(4d18h24m20s)
+    ✔ custom arg types for cmds @started(19-10-29 13:34) @done(19-10-29 14:42) @lasted(1h8m30s)
+longterm:
+    - tests with jest
+    - more detailed docs
+    - unordered arguments
+
+bugs:
+    - move argument type check to module from commandParser
+    
+features:
+    - argument prompting (wizards)
+    - providers (allow functions to be passed for the prefix property etc)
+    - cooldowns
+    - custom argument types
+    - auto reload dev mode: complex but command editing (so when u send a command, the bot sends a response and you edit the command the bot re-runs the command and edits its previous message)
+    - be able to compose types (arg can be a string or a number)
+    - support all arguments listed on https://discord-akairo.github.io/#/docs/main/master/arguments/types
+
+    - discord permission based restrictions (must have BAN_MEMBERS to exec command)
+    - channel restrictions (must be used in guilds) and dm commands
+    - conditional commands (must pass a certain function for the command to be ran)
+    - easy ownerOnly commands
+    - inhibitors
+
+haxified suggestions (i've moved some to other sections):
+    ✘ dynamic arguments (number/types of arguments change based on previous arguments) this is in akairo using generator functions @cancelled(20-01-28 16:22)
+    ✘ finalizers (after commands get run) @cancelled(20-01-28 16:22)
+    ✘ regex commands @cancelled(20-01-28 16:22)
+    ✘ providers? (like database providers) @cancelled(20-01-28 16:22)
+    ✔ command aliases @done
+    ✘ optional argument prompting @cancelled(20-01-28 16:22)
