--- a/TODO
+++ b/TODO
@@ -18,6 +18,6 @@ features:
     
     inhibitors system with builtin funcs for common things (global ownerOnly etc) kinda like middleware:
         ✔ bot admin @done(20-02-01 14:59)
-        - channel type restrictions (guild only, dm only etc)
+        ✔ channel type restrictions (guild only, dm only etc) @done(20-02-01 15:17)
         - discord perm restrictions
         - cooldowns
