add hasGuildPermission builtin inhibitor

--- a/TODO
+++ b/TODO
@@ -19,5 +19,5 @@ features:
     inhibitors system with builtin funcs for common things (global ownerOnly etc) kinda like middleware:
         ✔ bot admin @done(20-02-01 14:59)
         ✔ channel type restrictions (guild only, dm only etc) @done(20-02-01 15:17)
-        - discord perm restrictions
+        ✔ discord perm restrictions @done(20-02-01 15:34)
         - cooldowns
