play with todo a little

--- a/TODO
+++ b/TODO
@@ -11,14 +11,12 @@ done:
     ✔ auto reload dev mode: complex but command editing (so when u send a command, the bot sends a response and you edit the command the bot re-runs the command and edits its previous message) @done(20-02-07 10:41)
     ✘ argument prompting (wizards) @cancelled(20-02-07 11:08) not needed, D.js already includes awaitMessages and that's good enough IMO
     ✔ cookiecord generator cli @started(20-02-07 14:13) @done(20-02-07 16:12) @lasted(1h59m4s)
+    ✘ tests with jest? @cancelled(20-02-17 12:43)
 
 longterm:
-    - tests with jest?
     - more detailed docs
     - unordered arguments
     - support all arguments listed on https://discord-akairo.github.io/#/docs/main/master/arguments/types
-    
-bugs:
     - move argument type check to module from commandParser
     
 features:
