add command and listener argtypes

--- a/TODO
+++ b/TODO
@@ -12,7 +12,9 @@ done:
     ✘ argument prompting (wizards) @cancelled(20-02-07 11:08) not needed, D.js already includes awaitMessages and that's good enough IMO
     ✔ cookiecord generator cli @started(20-02-07 14:13) @done(20-02-07 16:12) @lasted(1h59m4s)
     ✘ tests with jest? @cancelled(20-02-17 12:43)
-
+    argtypes:
+        ✔ listeners @done(20-02-17 13:27)
+        ✔ commands @done(20-02-17 13:27)
 longterm:
     - more detailed docs
     - unordered arguments
@@ -22,3 +24,4 @@ longterm:
 features:
     - providers (allow functions to be passed for the prefix property etc)
     - be able to compose types (arg can be a string or a number)
+argtypes:
