--- a/TODO
+++ b/TODO
@@ -15,13 +15,17 @@ done:
     argtypes:
         ✔ listeners @done(20-02-17 13:27)
         ✔ commands @done(20-02-17 13:27)
+        ✔ text channel @done(20-02-17 20:05)
 longterm:
     - more detailed docs
     - unordered arguments
-    - support all arguments listed on https://discord-akairo.github.io/#/docs/main/master/arguments/types
+    - support all arguments listed on https://discord-akairo.github.io/#/docs/main/master/arguments/types @started(20-02-17 19:36)
     - move argument type check to module from commandParser
     
 features:
     - providers (allow functions to be passed for the prefix property etc)
     - be able to compose types (arg can be a string or a number)
-argtypes:
+    argtypes:
+        - role
+        - guild
+        - emoji
