--- a/TODO
+++ b/TODO
@@ -14,6 +14,7 @@ done:
     ✘ tests with jest? @cancelled(20-02-17 12:43)
     ✔ move argument type check to module from commandParser @done(20-02-17 21:01)
     ✘ be able to compose types (arg can be a string or a number) @cancelled(20-02-17 21:21) impossible with current tech
+    ✔ providers (allow functions to be passed for the prefix property etc) @done(20-02-18 08:37)
     argtypes:
         ✔ listeners @done(20-02-17 13:27)
         ✔ commands @done(20-02-17 13:27)
@@ -26,4 +27,3 @@ longterm:
     - unordered arguments
     
 features:
-    - providers (allow functions to be passed for the prefix property etc)
