--- a/TODO
+++ b/TODO
@@ -8,7 +8,7 @@ done:
         ✔ cooldowns @done(20-02-02 11:11)
     ✔ (custom) error handling for cmds @done(20-02-04 19:49)
     ✔ CookiecordClient#loadModulesFromFolder @done(20-02-07 09:41)
-    ✔ auto reload dev mode: complex but command editing (so when u send a command, the bot sends a response and you edit the command the bot re-runs the command and edits its previous message) @done(20-02-07 10:41)
+    ✔ auto reload dev mode: complex but command editing (this part NOT done and not planned: so when u send a command, the bot sends a response and you edit the command the bot re-runs the command and edits its previous message) @done(20-02-07 10:41)
     ✘ argument prompting (wizards) @cancelled(20-02-07 11:08) not needed, D.js already includes awaitMessages and that's good enough IMO
     ✔ cookiecord generator cli @started(20-02-07 14:13) @done(20-02-07 16:12) @lasted(1h59m4s)
     ✘ tests with jest? @cancelled(20-02-17 12:43)
@@ -22,6 +22,7 @@ done:
         ✔ role @done(20-02-17 20:10)
         ✘ emoji @cancelled(20-02-17 20:13) dont see the point because bot might not be in guild with the emoji 
         ✔ support all arguments listed on https://discord-akairo.github.io/#/docs/main/master/arguments/types @done(20-02-17 20:15) (all the ones that make sense)
+    ✔ Context api to get the trigger that triggered the command, prefix used and stuff like that @done(20-04-09 17:41)
 longterm:
     - more detailed docs
     - unordered arguments
@@ -31,3 +32,6 @@ features:
     - custom listener emitters
     - pass command trigger
     - custom inhibitor handler
+    - add .vscode	"typescript.tsdk": "node_modules/typescript/lib" for using project's TS version to cookiecord-generator
+    - make the commandManager/listenerManager api public
+    - docs for Context API
