--- a/TODO
+++ b/TODO
@@ -23,15 +23,15 @@ done:
         ✘ emoji @cancelled(20-02-17 20:13) dont see the point because bot might not be in guild with the emoji 
         ✔ support all arguments listed on https://discord-akairo.github.io/#/docs/main/master/arguments/types @done(20-02-17 20:15) (all the ones that make sense)
     ✔ Context api to get the trigger that triggered the command, prefix used and stuff like that @done(20-04-09 17:41)
+    ✔ docs for Context API @done(20-04-09 18:19)
 longterm:
     - more detailed docs
     - unordered arguments
     - sharding
+    - custom listener emitters
     
 features:
-    - custom listener emitters
-    - pass command trigger
     - custom inhibitor handler
     - add .vscode	"typescript.tsdk": "node_modules/typescript/lib" for using project's TS version to cookiecord-generator
     - make the commandManager/listenerManager api public
-    - docs for Context API
+    - subcommands
