--- a/TODO
+++ b/TODO
@@ -24,6 +24,7 @@ done:
         ✔ support all arguments listed on https://discord-akairo.github.io/#/docs/main/master/arguments/types @done(20-02-17 20:15) (all the ones that make sense)
     ✔ Context api to get the trigger that triggered the command, prefix used and stuff like that @done(20-04-09 17:41)
     ✔ docs for Context API @done(20-04-09 18:19)
+    ✔ optional args @done(20-04-10 15:45)
 longterm:
     - more detailed docs
     - unordered arguments
@@ -35,3 +36,4 @@ features:
     - add .vscode	"typescript.tsdk": "node_modules/typescript/lib" for using project's TS version to cookiecord-generator
     - make the commandManager/listenerManager api public
     - subcommands
+    - docs for optional args
