--- a/TODO
+++ b/TODO
@@ -28,6 +28,7 @@ done:
     ✔ docs for optional args @done(20-04-10 16:00)
     ✔ add .vscode	"typescript.tsdk": "node_modules/typescript/lib" for using project's TS version to cookiecord-generator @done(20-04-11 15:42)
     ✔ move to D.js stable @done(20-04-15 16:28)
+    ✔ allow ids in all the argtypes @done(20-04-15 16:46)
 longterm:
     - more detailed docs
     - unordered arguments
@@ -40,4 +41,3 @@ features:
     - parse "strings" like this in arg
     - subcommands
     - automated tests
-    - allow ids in all the argtypes
